--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <section class="home">
       <div class="home-img">
-        <img src="/Portofolio/image/ayak.jpg" alt="" />
+        <img src="/Portofolio/image/ayak.jpg" alt="" >
       </div>
       <div class="home-content">
         <h1>HAI AKU FANS MIE AYAM NOMER 1 <span></span></h1>
@@ -46,4 +46,5 @@
       </div>
     </section>
   </body>
+
 
