--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <section class="home">
       <div class="home-img">
-        <img src="/Portofolio/image/ayak.jpg" alt="" >
+        <img src="ayak.jpg" alt="" >
       </div>
       <div class="home-content">
         <h1>HAI AKU FANS MIE AYAM NOMER 1 <span></span></h1>
